-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Optimization
-
Fully Compatible
-
ALL
-
QO 2024-12-09
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Running histogram_estimation_accuracy_analysis_program with ASAN generates the following error message
==187816==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0xaaaabfc92aa0 bp 0xffffc043e910 sp 0xffffc043e910 T0) ce::TypePro ==187816==The signal is caused by a READ memory access. locator<mon ==187816==Hint: address points to the zero page. signed long #0 0xaaaabfc92aa0 in std::_Head_base<3ul, double, false>::_Head_base<double&>(double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple #1 0xaaaabfc92a08 in std::_Tuple_impl<3ul, double>::_Tuple_impl<double&>(double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple:441:4 #2 0xaaaabfc9296c in std::_Tuple_impl<2ul, double, double>::_Tuple_impl<double&, double&, void>(double&, double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple:291:4 #3 0xaaaabfc928c8 in std::_Tuple_impl<1ul, double, double, double>::_Tuple_impl<double&, double&, double&, void>(double&, double&, double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple:291:4 ase<double& #4 0xaaaabfc9285c in std::_Tuple_impl<0ul, double, double, double, double>::_Tuple_impl<double&, double&, double&, double&, void>(double&, double&, double&, double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple:291:4 #5 0xaaaabfc85a30 in std::tuple<double, double, double, double>::tuple<double&, double&, double&, double&, true, true>(double&, double&, double&, double&) /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple:748:4 #6 0xaaaabfc85678 in mongo::ce::percentiles(std::vector<double, std::allocator<double> >) /home/ubuntu/mongo/src/mongo/db/query/ce/histogram_accuracy_test_utils.cpp:48:12 #7 0xaaaabfc8c5fc in mongo::ce::runQueries(unsigned long, unsigned long, mongo::ce::QueryType, std::pair<unsigned long, unsigned long>, mongo::ce::TypeProbability, std::vector<mongo::stats::SBEValue, std::allocator<mongo::stats::SBEValue> > const&, std::shared_ptr<mongo::stats::CEHistogram const>, bool, bool, unsigned long) /home/ubuntu/mongo/src/mongo/db/query/ce/histogram_accuracy_test_utils.cpp:500:37 #8 0xaaaabfc8e3a8 in mongo::ce::runAccuracyTestConfiguration(mongo::ce::DataDistributionEnum, std::vector<std::vector<mongo::ce::TypeProbability, std::allocator<mongo::ce::TypeProbability> >, std::allocator<std::vector<mongo::ce::TypeProbability, std::allocator<mongo::ce::TypeProbability> > > > const&, std::vector<mongo::ce::TypeProbability, std::allocator<mongo::ce::TypeProbability> > const&, std::vector<int, std::allocator<int> > const&, unsigned long, std::pair<unsigned long, unsigned long> const&, std::pair<unsigned long, unsigned long> const&, int, mongo::ce::QueryType, bool, bool, unsigned long, bool, int) /home/ubuntu/mongo/src/mongo/db/query/ce/histogram_accuracy_test_utils.cpp:581:30 #9 0xaaaabfc57bcc in main /home/ubuntu/mongo/src/mongo/db/query/ce/histogram_accuracy_test.cpp:208:17 #10 0xffff9af973f8 in __libc_start_call_main csu/../sysdeps/nptl/libc_start_call_main.h:58:16 #11 0xffff9af974c8 in __libc_start_main csu/../csu/libc-start.c:392:3 #12 0xaaaabfbb55ec in _start (/home/ubuntu/mongo/build/install/bin/histogram_estimation_accuracy_analysis_program+0xb5055ec) AddressSanitizer can not provide additional info. SUMMARY: AddressSanitizer: SEGV /home/ubuntu/mongo/bazel-mongo/external/mongo_toolchain/stow/gcc-v4/include/c++/11.3.0/tuple in std::_Head_base<3ul, double, false>::_Head_base<double&>(double&) ==187816==ABORTING