SERVER-97499: Segfault in accuracy testing program (#29877)

GitOrigin-RevId: 76cd19a00a2e9b2e6ffead665c752b8859cc9234